--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="uk"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -17,10 +20,17 @@
       href="./styles/main.scss"
     />
   </head>
-  <body>
+  <body class="page_body">
     <header class="header">
       <div class="container">
-        <div class="header__menu">menu</div>
+        <div class="header__title-menu">
+          <div class="header__icon">
+            <a
+              href="#menu"
+              class="icon icon--menu"
+            ></a>
+          </div>
+        </div>
         <div class="header__content">
           <div class="header__top">
             <img
@@ -28,13 +38,112 @@
               alt="Національний художній музей України"
               class="header__image"
             />
+            <a
+              href="#"
+              class="header__logo"
+            >
+              <span>NA</span>
+              <span>MU</span>
+            </a>
           </div>
           <div class="header__bottom">
-            <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <h1 class="header__title-image">ХУДОЖНІЙ МУЗЕЙ</h1>
             <button class="header__button">квитки</button>
           </div>
         </div>
       </div>
     </header>
+    <aside class="menu page__menu">
+      <div class="menu__wrapper">
+        <div class="container">
+          <div class="menu__content">
+            <div class="menu__content-top">
+              <div class="menu__icon">
+                <a
+                  href="#menu"
+                  class="icon icon--close"
+                ></a>
+              </div>
+              <menu class="nav__list">
+                <li class="nav_item">
+                  <a
+                    href="#galery"
+                    class="nav__link"
+                  >
+                    Галерея
+                  </a>
+                </li>
+                <li class="nav_item">
+                  <a
+                    href="#subscribe"
+                    class="nav__link"
+                  >
+                    Про нас
+                  </a>
+                </li>
+                <li class="nav_item">
+                  <a
+                    href="ations"
+                    class="nav__link"
+                  >
+                    Виставки та події
+                  </a>
+                </li>
+                <li class="nav_item">
+                  <a
+                    href="#contacts"
+                    class="nav__link"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </menu>
+              <div class="menu__line"></div>
+            </div>
+            <div class="menu__content-bottom">
+              <section class="schedule schedule__color--white">
+                <div class="schedule__top">
+                  <h2 class="schedule__title">Графік роботи</h2>
+                  <p class="schedule__day">
+                    <span class="schedule__day-time">12:00 — 20:00</span>
+                    <span class="schedule__day-name">середа</span>
+                  </p>
+                  <p class="schedule__day">
+                    <span class="schedule__day-time">12:00 — 20:00</span>
+                    <span class="schedule__day-name">четвер</span>
+                  </p>
+                  <p class="schedule__day">
+                    <span class="schedule__day-time">12:00 — 20:00</span>
+                    <span class="schedule__day-name">п’ятниця</span>
+                  </p>
+                  <p class="schedule__day">
+                    <span class="schedule__day-time">12:00 — 19:00</span>
+                    <span class="schedule__day-name">субота</span>
+                  </p>
+                  <p class="schedule__day">
+                    <span class="schedule__day-time">12:00 — 19:00</span>
+                    <span class="schedule__day-name">неділя</span>
+                  </p>
+                </div>
+                <div class="schedule__note menu__schedule-note">
+                  <span class="schedule__note-title">Вихідні:</span>
+                  понеділок, вівторок
+                  <br />
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </div>
+              </section>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+    <main>
+      <div class="container">
+        <section class="ations">Актуальні події</section>
+        <section class="galery">Галерея</section>
+        <section class="subscribe">Підписка</section>
+        <section class="contacts">Контакти</section>
+      </div>
+    </main>
   </body>
 </html>
