add menu transition

--- a/src/index.html
+++ b/src/index.html
@@ -23,14 +23,6 @@
   <body class="page_body">
     <header class="header">
       <div class="container">
-        <div class="header__title-menu">
-          <div class="header__icon">
-            <a
-              href="#menu"
-              class="icon icon--menu"
-            ></a>
-          </div>
-        </div>
         <div class="header__content">
           <div class="header__top">
             <img
@@ -49,23 +41,38 @@
           <div class="header__bottom">
             <h1 class="header__title-image">ХУДОЖНІЙ МУЗЕЙ</h1>
             <button class="header__button">квитки</button>
+            <div class="header__actions">
+              <span class="header__actions-line"></span>
+              Події
+            </div>
+          </div>
+        </div>
+        <div class="header__title-menu">
+          <div class="header__icon">
+            <a
+              href="#menu"
+              class="icon icon--menu"
+            ></a>
           </div>
         </div>
       </div>
     </header>
-    <aside class="menu page__menu">
+    <aside
+      class="menu page__menu"
+      id="menu"
+    >
       <div class="menu__wrapper">
         <div class="container">
           <div class="menu__content">
             <div class="menu__content-top">
               <div class="menu__icon">
                 <a
-                  href="#menu"
+                  href="#"
                   class="icon icon--close"
                 ></a>
               </div>
               <menu class="nav__list">
-                <li class="nav_item">
+                <li class="nav__item">
                   <a
                     href="#galery"
                     class="nav__link"
@@ -73,7 +80,7 @@
                     Галерея
                   </a>
                 </li>
-                <li class="nav_item">
+                <li class="nav__item">
                   <a
                     href="#subscribe"
                     class="nav__link"
@@ -81,7 +88,7 @@
                     Про нас
                   </a>
                 </li>
-                <li class="nav_item">
+                <li class="nav__item">
                   <a
                     href="ations"
                     class="nav__link"
@@ -89,7 +96,7 @@
                     Виставки та події
                   </a>
                 </li>
-                <li class="nav_item">
+                <li class="nav__item">
                   <a
                     href="#contacts"
                     class="nav__link"
