--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,5 @@
+<!-- #region HEAD -->
+
 <!doctype html>
 <html
   lang="uk"
@@ -21,6 +23,8 @@
     />
   </head>
   <body class="page_body">
+    <!-- endregion -->
+    <!-- #region HEADER -->
     <header class="header">
       <div class="container">
         <div class="header__content">
@@ -57,6 +61,8 @@
         </div>
       </div>
     </header>
+    <!-- endregion -->
+    <!-- #region MENU -->
     <aside
       class="menu page__menu"
       id="menu"
@@ -144,12 +150,62 @@
         </div>
       </div>
     </aside>
+    <!-- endregion -->
     <main>
       <div class="container">
-        <section class="ations">Актуальні події</section>
-        <section class="galery">Галерея</section>
-        <section class="subscribe">Підписка</section>
-        <section class="contacts">Контакти</section>
+        <div class="content">
+          <section class="ations">
+            <h2 class="content__title">Актуальні події</h2>
+            <div class="actions__content">
+              <article class="exhibition">
+                <div class="exhibition__picture">
+                  <img
+                    class="exhibition__image"
+                    src="./images/gradobank.png"
+                    alt="Колекція Градобанку"
+                  />
+                </div>
+                <div class="exhibition__content">
+                  <div class="exhibition__top">
+                    <p class="exhibition__type">ВИСТАВКА</p>
+                    <p class="exhibition__date">26.08-29.11.2019</p>
+                  </div>
+                  <h3 class="exhibition__title">Йду і повертаюсь</h3>
+                  <p class="exhibition__text">
+                    Національний Художній Музей України презентує унікальну
+                    частину колекції Градобанку - українське мистецтво другої
+                    половини 1980-1995 років.
+                  </p>
+                </div>
+              </article>
+              <article class="exhibition">
+                <div class="exhibition__picture">
+                  <img
+                    class="exhibition__image"
+                    src="./images/Yablonska.png"
+                    alt="Колекція Градобанку"
+                  />
+                </div>
+                <div class="exhibition__content">
+                  <div class="exhibition__top">
+                    <p class="exhibition__type">ВИСТАВКА</p>
+                    <p class="exhibition__date">26.08-29.11.2019</p>
+                  </div>
+                  <h3 class="exhibition__title">І спогади і мрії</h3>
+                  <p class="exhibition__text">
+                    Національний художній музей України до 100 річчя від дня
+                    народження видатної української художниці Тетяни Яблонської
+                    відкриває ретроспективну ювілейну виставку «І спогади і
+                    мрії».
+                  </p>
+                </div>
+              </article>
+            </div>
+          </section>
+          <section class="galery">Галерея</section>
+          <section class="subscribe">Підписка</section>
+          <section class="contacts">Контакти</section>
+        </div>
       </div>
     </main>
   </body>
