--- a/src/index.html
+++ b/src/index.html
@@ -183,7 +183,7 @@
                   <img
                     class="exhibition__image"
                     src="./images/Yablonska.png"
-                    alt="Колекція Градобанку"
+                    alt="Картина художниці Тетяни Яблонської"
                   />
                 </div>
                 <div class="exhibition__content">
@@ -198,6 +198,24 @@
                     відкриває ретроспективну ювілейну виставку «І спогади і
                     мрії».
                   </p>
+                </div>
+              </article>
+              <article class="lecture">
+                <div class="lecture__picture">
+                  <img
+                    class="lecture__image"
+                    src="./images/classicism.png"
+                    alt="Колекція Градобанку"
+                  />
+                </div>
+                <div class="lecture__content">
+                  <div class="lecture__content-container">
+                    <div class="lecture__top">
+                      <p class="lecture__type">ЛЕКЦІЯ</p>
+                      <p class="lecture__date">26/08/2019 - 11:00</p>
+                    </div>
+                    <h3 class="lecture__title">Від класицизму до романтизму</h3>
+                  </div>
                 </div>
               </article>
             </div>
