fixed extend issue

--- a/src/index.html
+++ b/src/index.html
@@ -155,19 +155,19 @@
           <h5 class="menu-info__title">Графік роботи</h5>
           <div class="menu-info__schedules">
             <p class="menu-info__schedule">
-              <bold>12:00 — 20:00</bold>
+              <bold class="bold">12:00 — 20:00</bold>
               середа
-              <bold>12:00 — 20:00</bold>
+              <bold class="bold">12:00 — 20:00</bold>
               четвер
-              <bold>12:00 — 20:00</bold>
+              <bold class="bold">12:00 — 20:00</bold>
               п’ятниця
-              <bold>11:00 — 19:00</bold>
+              <bold class="bold">11:00 — 19:00</bold>
               субота
-              <bold>11:00 — 19:00</bold>
+              <bold class="bold">11:00 — 19:00</bold>
               неділя
             </p>
             <p class="menu-info__schedule">
-              <bold>Вихідні:</bold>
+              <bold class="bold">Вихідні:</bold>
               понеділок, вівторок
               <br />
               Каса припиняє роботу за 1 годину до закриття музею
@@ -407,23 +407,23 @@
       <div class="footer-info">
         <h5 class="footer-info__title">Графік роботи</h5>
         <p class="footer-info__content">
-          <bold>12:00 — 20:00</bold>
+          <bold class="bold">12:00 — 20:00</bold>
           середа
           <br />
-          <bold>12:00 — 20:00</bold>
+          <bold class="bold">12:00 — 20:00</bold>
           четвер
           <br />
-          <bold>12:00 — 20:00</bold>
+          <bold class="bold">12:00 — 20:00</bold>
           п’ятниця
           <br />
-          <bold>11:00 — 19:00</bold>
+          <bold class="bold">11:00 — 19:00</bold>
           субота
           <br />
-          <bold>11:00 — 19:00</bold>
+          <bold class="bold">11:00 — 19:00</bold>
           неділя
           <br />
           <br />
-          <bold>Вихідні:</bold>
+          <bold class="bold">Вихідні:</bold>
           понеділок, вівторок
           <br />
           Каса припиняє роботу за 1 годину
