add refs to instagram and facebook

--- a/src/index.html
+++ b/src/index.html
@@ -399,8 +399,9 @@
 
           <div class="footer__block-logo">
             <a
-              href="#"
+              href="https://www.facebook.com/namu.museum/?locale=ru_RU"
               class="footer__link"
+              target="_blank"
             >
               <svg
                 class="footer__ico"
@@ -417,8 +418,9 @@
               </svg>
             </a>
             <a
-              href="#"
+              href="https://www.instagram.com/namu.museum/"
               class="footer__link"
+              target="_blank"
             >
               <svg
                 class="footer__ico"
