add mobile galery

--- a/src/index.html
+++ b/src/index.html
@@ -154,7 +154,10 @@
     <main>
       <div class="container">
         <div class="content">
-          <section class="ations">
+          <section
+            id="ations"
+            class="ations content__actions"
+          >
             <h2 class="content__title">Актуальні події</h2>
             <div class="actions__content">
               <article class="exhibition">
@@ -220,7 +223,77 @@
               </article>
             </div>
           </section>
-          <section class="galery">Галерея</section>
+          <section
+            id="galery"
+            class="galery"
+          >
+            <h2 class="content__title content__galery">Галерея</h2>
+            <div class="galery__wrapper">
+              <div class="galery__slides">
+                <div
+                  id="slide-1"
+                  class="galery__slide"
+                >
+                  <img
+                    class="galery__picture"
+                    src="./images/galery/slider/picture1.png"
+                    alt="Picture 1"
+                  />
+                </div>
+
+                <div
+                  id="slide-2"
+                  class="galery__slide"
+                >
+                  <img
+                    class="galery__picture"
+                    src="./images/galery/slider/picture2.png"
+                    alt="Picture 2"
+                  />
+                </div>
+
+                <div
+                  id="slide-3"
+                  class="galery__slide"
+                >
+                  <img
+                    class="galery__picture"
+                    src="./images/galery/slider/picture3.png"
+                    alt="Picture 3"
+                  />
+                </div>
+
+                <div
+                  id="slide-4"
+                  class="galery__slide"
+                >
+                  <img
+                    class="galery__picture"
+                    src="./images/galery/slider/picture4.png"
+                    alt="Picture 4"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="galery__links">
+              <a
+                href="#slide-1"
+                class="galery__link galery__link--slide-1"
+              ></a>
+              <a
+                href="#slide-2"
+                class="galery__link galery__link--slide-2"
+              ></a>
+              <a
+                href="#slide-3"
+                class="galery__link galery__link--slide-3"
+              ></a>
+              <a
+                href="#slide-4"
+                class="galery__link galery__link--slide-4"
+              ></a>
+            </div>
+          </section>
           <section class="subscribe">Підписка</section>
           <section class="contacts">Контакти</section>
         </div>
