--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
               <menu class="nav__list">
                 <li class="nav__item">
                   <a
-                    href="#galery"
+                    href="#gallery"
                     class="nav__link"
                   >
                     Галерея
@@ -96,7 +96,7 @@
                 </li>
                 <li class="nav__item">
                   <a
-                    href="ations"
+                    href="#actions"
                     class="nav__link"
                   >
                     Виставки та події
@@ -224,73 +224,77 @@
             </div>
           </section>
           <section
-            id="galery"
-            class="galery"
+            class="gallery"
+            id="gallery"
           >
-            <h2 class="content__title content__galery">Галерея</h2>
-            <div class="galery__wrapper">
-              <div class="galery__slides">
+            <h2 class="content__title content__gallery">Галерея</h2>
+            <div class="gallery__wrapper">
+              <div class="gallery__slides">
                 <div
                   id="slide-1"
-                  class="galery__slide"
+                  class="gallery__slide gallery__slide--slide-1"
+                  tabindex="1"
                 >
                   <img
-                    class="galery__picture"
-                    src="./images/galery/slider/picture1.png"
+                    class="gallery__picture"
+                    src="./images/gallery/slider/picture1.png"
                     alt="Picture 1"
                   />
                 </div>
 
                 <div
                   id="slide-2"
-                  class="galery__slide"
+                  class="gallery__slide gallery__slide--slide-2"
+                  tabindex="2"
                 >
                   <img
-                    class="galery__picture"
-                    src="./images/galery/slider/picture2.png"
+                    class="gallery__picture"
+                    src="./images/gallery/slider/picture2.png"
                     alt="Picture 2"
                   />
                 </div>
 
                 <div
                   id="slide-3"
-                  class="galery__slide"
+                  class="gallery__slide gallery__slide--slide-3"
+                  tabindex="3"
                 >
                   <img
-                    class="galery__picture"
-                    src="./images/galery/slider/picture3.png"
+                    class="gallery__picture"
+                    src="./images/gallery/slider/picture3.png"
                     alt="Picture 3"
                   />
                 </div>
 
                 <div
                   id="slide-4"
-                  class="galery__slide"
+                  class="gallery__slide gallery__slide--slide-4"
+                  tabindex="4"
                 >
                   <img
-                    class="galery__picture"
-                    src="./images/galery/slider/picture4.png"
+                    class="gallery__picture"
+                    src="./images/gallery/slider/picture4.png"
                     alt="Picture 4"
                   />
                 </div>
               </div>
             </div>
-            <div class="galery__links">
+            <div class="gallery__links">
               <a
                 href="#slide-1"
-                class="galery__link galery__link--slide-1"
+                class="gallery__link gallery__link--slide-1"
               ></a>
               <a
                 href="#slide-2"
-                class="galery__link galery__link--slide-2"
+                class="gallery__link gallery__link--slide-2"
               ></a>
               <a
                 href="#slide-3"
-                class="galery__link galery__link--slide-3"
+                class="gallery__link gallery__link--slide-3"
               ></a>
               <a
                 href="#slide-4"
-                class="galery__link galery__link--slide-4"
+                class="gallery__link gallery__link--slide-4"
               ></a>
             </div>
           </section>
