add desktop gallery

--- a/src/index.html
+++ b/src/index.html
@@ -235,11 +235,17 @@
                   class="gallery__slide gallery__slide--slide-1"
                   tabindex="1"
                 >
-                  <img
-                    class="gallery__picture"
-                    src="./images/gallery/slider/picture1.png"
-                    alt="Picture 1"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1280px)"
+                      srcset="./images/gallery/desktop/galery1.png"
+                    />
+                    <img
+                      class="gallery__picture"
+                      src="./images/gallery/slider/picture1.png"
+                      alt="Picture 1"
+                    />
+                  </picture>
                 </div>
 
                 <div
@@ -247,11 +253,17 @@
                   class="gallery__slide gallery__slide--slide-2"
                   tabindex="2"
                 >
-                  <img
-                    class="gallery__picture"
-                    src="./images/gallery/slider/picture2.png"
-                    alt="Picture 2"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1280px)"
+                      srcset="./images/gallery/desktop/galery2.png"
+                    />
+                    <img
+                      class="gallery__picture"
+                      src="./images/gallery/slider/picture2.png"
+                      alt="Picture 2"
+                    />
+                  </picture>
                 </div>
 
                 <div
@@ -259,11 +271,17 @@
                   class="gallery__slide gallery__slide--slide-3"
                   tabindex="3"
                 >
-                  <img
-                    class="gallery__picture"
-                    src="./images/gallery/slider/picture3.png"
-                    alt="Picture 3"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1280px)"
+                      srcset="./images/gallery/desktop/galery3.png"
+                    />
+                    <img
+                      class="gallery__picture"
+                      src="./images/gallery/slider/picture3.png"
+                      alt="Picture 3"
+                    />
+                  </picture>
                 </div>
 
                 <div
@@ -271,11 +289,17 @@
                   class="gallery__slide gallery__slide--slide-4"
                   tabindex="4"
                 >
-                  <img
-                    class="gallery__picture"
-                    src="./images/gallery/slider/picture4.png"
-                    alt="Picture 4"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1280px)"
+                      srcset="./images/gallery/desktop/galery3.png"
+                    />
+                    <img
+                      class="gallery__picture"
+                      src="./images/gallery/slider/picture4.png"
+                      alt="Picture 4"
+                    />
+                  </picture>
                 </div>
               </div>
             </div>
