finish with subscribe

--- a/src/index.html
+++ b/src/index.html
@@ -152,8 +152,9 @@
     </aside>
     <!-- endregion -->
     <main>
-      <div class="container">
-        <div class="content">
+      <!-- #region MAIN CONTENT -->
+      <div class="content">
+        <div class="container">
           <section
             id="ations"
             class="ations content__actions"
@@ -322,9 +323,38 @@
               ></a>
             </div>
           </section>
-          <section class="subscribe">Підписка</section>
-          <section class="contacts">Контакти</section>
         </div>
+
+        <!-- #endregion -->
+        <section
+          id="subscribe"
+          class="subscribe content__subscribe"
+        >
+          <div class="container">
+            <div class="subscribe__context">
+              <div class="subscribe__top">
+                <h2 class="subscribe__title">Підписка</h2>
+                <p class="subscribe__text">
+                  Бути в курсі всіх актуальних подій та останніх новин.
+                </p>
+              </div>
+              <form
+                class="subscribe-form subscribe__subscribe-form"
+                action="#"
+              >
+                <input
+                  class="subscribe-form__email"
+                  type="email"
+                  name="email"
+                  placeholder="E-mail"
+                  required
+                />
+                <button class="subscribe-form__button"></button>
+              </form>
+            </div>
+          </div>
+        </section>
+        <section class="contacts">Контакти</section>
       </div>
     </main>
   </body>
