fix width elements and refs

--- a/src/index.html
+++ b/src/index.html
@@ -250,25 +250,27 @@
           </div>
         </div>
 
-        <img
+
+      </section>
+
+      <img
           class="events__bottom-image"
           src="./images/content/three-desktop.png"
           alt="three"
         />
-        <div class="events__bottom-block">
-          <div class="events__bottom-content">
-            <div class="events__bottom-content-date">
-              <p class="events__bottom-text-date">ЛЕКЦІЯ</p>
-              <p class="events__bottom-date">26/08/2019 - 11:00</p>
-            </div>
-            <h2 class="events__bottom-title">
-              Від класицизму до
-              <br />
-              романтизму
-            </h2>
+      <div class="events__bottom-block">
+        <div class="events__bottom-content">
+          <div class="events__bottom-content-date">
+            <p class="events__bottom-text-date">ЛЕКЦІЯ</p>
+            <p class="events__bottom-date">26/08/2019 - 11:00</p>
           </div>
+          <h2 class="events__bottom-title">
+            Від класицизму до
+            <br />
+            романтизму
+          </h2>
         </div>
-      </section>
+      </div>
 
       <section
         class="gallery"
@@ -486,9 +488,15 @@
             <div class="footer__block-text">
               <p class="footer__text-title">Контакти:</p>
               <p class="footer__text-text">
-                вул. М. Грушевського, 6; Київ, 01001 тел. +38 (044) 278-13-57
-                факс +38 (044) 278-74-54 e-mail: info@namu.kiev.ua
+                <a class="footer__text-link" href="https://maps.google.com/?q=вул. М. Грушевського, 6, Київ, 01001"
+                target="_blank">
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a> <br>
+                тел. <a class="footer__text-link" href="tel:+380442781357">+38 (044) 278-13-57</a> <br>
+                факс <a class="footer__text-link" href="tel:+380442787454">+38 (044) 278-74-54</a> <br>
+                e-mail: <a class="footer__text-link" href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a>
               </p>
+
             </div>
           </div>
           <a href="#">
