--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       href="./styles/main.scss"
     />
   </head>
-  <body class="page_body">
+  <body class="page__body">
     <!-- endregion -->
     <!-- #region HEADER -->
     <header class="header">
@@ -36,7 +36,7 @@
             />
             <a
               href="#"
-              class="header__logo"
+              class="logo header__logo"
             >
               <span>NA</span>
               <span>MU</span>
@@ -77,7 +77,7 @@
                   class="icon icon--close"
                 ></a>
               </div>
-              <menu class="nav__list">
+              <menu class="nav nav--column--100px">
                 <li class="nav__item">
                   <a
                     href="#gallery"
@@ -114,7 +114,7 @@
               <div class="menu__line"></div>
             </div>
             <div class="menu__content-bottom">
-              <section class="schedule schedule__color--white">
+              <article class="schedule schedule__color--white">
                 <div class="schedule__top">
                   <h2 class="schedule__title">Графік роботи</h2>
                   <p class="schedule__day">
@@ -144,7 +144,7 @@
                   <br />
                   Каса припиняє роботу за 1 годину до закриття музею
                 </div>
-              </section>
+              </article>
             </div>
           </div>
         </div>
@@ -157,9 +157,9 @@
         <div class="container">
           <section
             id="ations"
-            class="ations content__actions"
+            class="ations page__actions"
           >
-            <h2 class="content__title">Актуальні події</h2>
+            <h2 class="page__title">Актуальні події</h2>
             <div class="actions__content">
               <article class="exhibition">
                 <div class="exhibition__picture">
@@ -228,7 +228,7 @@
             class="gallery"
             id="gallery"
           >
-            <h2 class="content__title content__gallery">Галерея</h2>
+            <h2 class="page__title page__gallery">Галерея</h2>
             <div class="gallery__wrapper">
               <div class="gallery__slides">
                 <div
@@ -328,7 +328,7 @@
         <!-- #endregion -->
         <section
           id="subscribe"
-          class="subscribe content__subscribe"
+          class="subscribe page__subscribe"
         >
           <div class="container">
             <div class="subscribe__context">
@@ -354,8 +354,130 @@
             </div>
           </div>
         </section>
-        <section class="contacts">Контакти</section>
+        <div class="container">
+          <section
+            id="contacts"
+            class="contacts"
+          >
+            <div class="contacts__top">
+              <a
+                href="#"
+                class="logo contacts__logo"
+              >
+                <span>NA</span>
+                <span>MU</span>
+              </a>
+              <div class="contacts__icons">
+                <a
+                  href="https:/facebook.com"
+                  target="_blank"
+                  class="icon icon--facebook"
+                ></a>
+                <a
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                  class="icon icon--instagram"
+                ></a>
+              </div>
+            </div>
+            <article class="schedule">
+              <div class="schedule__top">
+                <h2 class="schedule__title">Графік роботи</h2>
+                <p class="schedule__day">
+                  <span class="schedule__day-time">12:00 — 20:00</span>
+                  <span class="schedule__day-name">середа</span>
+                </p>
+                <p class="schedule__day">
+                  <span class="schedule__day-time">12:00 — 20:00</span>
+                  <span class="schedule__day-name">четвер</span>
+                </p>
+                <p class="schedule__day">
+                  <span class="schedule__day-time">12:00 — 20:00</span>
+                  <span class="schedule__day-name">п’ятниця</span>
+                </p>
+                <p class="schedule__day">
+                  <span class="schedule__day-time">12:00 — 19:00</span>
+                  <span class="schedule__day-name">субота</span>
+                </p>
+                <p class="schedule__day">
+                  <span class="schedule__day-time">12:00 — 19:00</span>
+                  <span class="schedule__day-name">неділя</span>
+                </p>
+              </div>
+              <div class="schedule__note menu__schedule-note">
+                <span class="schedule__note-title">Вихідні:</span>
+                понеділок, вівторок
+                <br />
+                Каса припиняє роботу за 1 годину до закриття музею
+              </div>
+            </article>
+            <article class="address">
+              <h2 class="address__title">Контакти:</h2>
+              <p class="address__text">
+                вул. М. Грушевського, 6; Київ, 01001
+                <br />
+                тел.
+                <a
+                  class="address__phone"
+                  href="tel:+380442781357"
+                >
+                  +38 (044) 278-13-57
+                </a>
+                <br />
+                факс +38 (044) 278-74-54
+                <br />
+                e-mail: info@namu.kiev.ua
+              </p>
+            </article>
+            <div class="contacts__up">
+              <a
+                href="#"
+                class="icon icon--up contacts__icon-up"
+              ></a>
+            </div>
+            <menu class="nav contacts__nav nav--gap--footer">
+              <li class="nav__item">
+                <a
+                  href="#gallery"
+                  class="nav__link nav__link--footer"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#subscribe"
+                  class="nav__link nav__link--footer"
+                >
+                  Про нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#actions"
+                  class="nav__link nav__link--footer"
+                >
+                  Виставки та події
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#contacts"
+                  class="nav__link nav__link--footer"
+                >
+                  Контакти
+                </a>
+              </li>
+            </menu>
+          </section>
+        </div>
       </div>
     </main>
+    <div class="container">
+      <footer class="footer page__footer">
+        <p>Copyright © 2019. All Rights Reserved.</p>
+        <p>Designed by Zhyriada Marina</p>
+      </footer>
+    </div>
   </body>
 </html>
