fixes after review

--- a/src/index.html
+++ b/src/index.html
@@ -284,7 +284,7 @@
         </section>
 
         <section
-          class="gallery"
+          class="container gallery"
           id="галерея"
         >
           <h2 class="gallery__title">Галерея</h2>
