finisn with subscribe

--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,9 @@
               <div class="menu__line"></div>
             </div>
             <div class="menu__content-bottom">
-              <article class="schedule schedule__color--white">
+              <article
+                class="schedule schedule--color--white schedule--two-rows"
+              >
                 <div class="schedule__top">
                   <h2 class="schedule__title">Графік роботи</h2>
                   <p class="schedule__day">
@@ -138,7 +140,9 @@
                     <span class="schedule__day-name">неділя</span>
                   </p>
                 </div>
-                <div class="schedule__note menu__schedule-note">
+                <div
+                  class="schedule__note menu__schedule-note schedule__note--margin--40px"
+                >
                   <span class="schedule__note-title">Вихідні:</span>
                   понеділок, вівторок
                   <br />
@@ -156,7 +160,7 @@
       <div class="content">
         <div class="container">
           <section
-            id="ations"
+            id="aсtions"
             class="ations page__actions"
           >
             <h2 class="page__title">Актуальні події</h2>
@@ -279,7 +283,7 @@
                     />
                     <img
                       class="gallery__picture"
-                      src="./images/gallery/slider/picture3.png"
+                      src="./images/gallery/slider/picture4.png"
                       alt="Picture 3"
                     />
                   </picture>
@@ -323,38 +327,36 @@
               ></a>
             </div>
           </section>
-        </div>
 
-        <!-- #endregion -->
-        <section
-          id="subscribe"
-          class="subscribe page__subscribe"
-        >
-          <div class="container">
-            <div class="subscribe__context">
-              <div class="subscribe__top">
-                <h2 class="subscribe__title">Підписка</h2>
-                <p class="subscribe__text">
-                  Бути в курсі всіх актуальних подій та останніх новин.
-                </p>
+          <!-- #endregion -->
+          <section
+            id="subscribe"
+            class="subscribe page__subscribe"
+          >
+            <div class="container">
+              <div class="subscribe__context">
+                <div class="subscribe__top">
+                  <h2 class="subscribe__title">Підписка</h2>
+                  <p class="subscribe__text">
+                    Бути в курсі всіх актуальних подій та останніх новин.
+                  </p>
+                </div>
+                <form
+                  class="subscribe-form subscribe__subscribe-form"
+                  action="#"
+                >
+                  <input
+                    class="subscribe-form__email"
+                    type="email"
+                    name="email"
+                    placeholder="E-mail"
+                    required
+                  />
+                  <button class="subscribe-form__button"></button>
+                </form>
               </div>
-              <form
-                class="subscribe-form subscribe__subscribe-form"
-                action="#"
-              >
-                <input
-                  class="subscribe-form__email"
-                  type="email"
-                  name="email"
-                  placeholder="E-mail"
-                  required
-                />
-                <button class="subscribe-form__button"></button>
-              </form>
             </div>
-          </div>
-        </section>
-        <div class="container">
+          </section>
           <section
             id="contacts"
             class="contacts"
@@ -380,7 +382,7 @@
                 ></a>
               </div>
             </div>
-            <article class="schedule">
+            <article class="schedule contacts__schedule">
               <div class="schedule__top">
                 <h2 class="schedule__title">Графік роботи</h2>
                 <p class="schedule__day">
@@ -404,14 +406,14 @@
                   <span class="schedule__day-name">неділя</span>
                 </p>
               </div>
-              <div class="schedule__note menu__schedule-note">
+              <div class="schedule__note schedule__note--margin--20px">
                 <span class="schedule__note-title">Вихідні:</span>
                 понеділок, вівторок
                 <br />
                 Каса припиняє роботу за 1 годину до закриття музею
               </div>
             </article>
-            <article class="address">
+            <article class="address contacts__address">
               <h2 class="address__title">Контакти:</h2>
               <p class="address__text">
                 вул. М. Грушевського, 6; Київ, 01001
