--- a/src/index.html
+++ b/src/index.html
@@ -160,7 +160,7 @@
       <div class="content">
         <div class="container">
           <section
-            id="aсtions"
+            id="actions"
             class="ations page__actions"
           >
             <h2 class="page__title">Актуальні події</h2>
