fix width elements and refs

--- a/src/index.html
+++ b/src/index.html
@@ -102,8 +102,8 @@
           МУЗЕЙ
         </h1>
         <div class="header__content-block">
-          <p class="header__block-text">КВИТКИ</p>
-          <a href="#subscribe">
+          <a class="header__ref" href="#subscribe">
+            <p class="header__block-text">КВИТКИ</p>
             <button class="header__block-button">
               <img
                 src="./images/icons/vector_right.svg"
