fix links and scroll menu

--- a/src/index.html
+++ b/src/index.html
@@ -425,22 +425,28 @@
                     class="footer__logos--logo"
                   />
                 </a>
-                <a
-                  href="#"
+                <div class="footer__icons">
+                  <a
+                  href="https://www.facebook.com/namu.museum"
                   target="_blank"
-                  class="footer__logos--icons"
-                >
-                  <img
-                    src="./images/icons/facebook-icon.png"
-                    alt="Facebook"
-                    class="footer__logos--icon"
-                  />
-                  <img
-                    src="./images/icons//instagram-icon.png"
-                    alt="Instagram"
-                    class="footer__logos--icon"
-                  />
-                </a>
+                  >
+                    <img
+                      src="./images/icons/facebook-icon.png"
+                      alt="Facebook"
+                      class="footer__icons--icon"
+                    />
+                  </a>
+                  <a
+                  href="https://www.instagram.com/namu.museum/?igshid=YmMyMTA2M2Y%3D"
+                  target="_blank"
+                  >
+                    <img
+                      src="./images/icons//instagram-icon.png"
+                      alt="Instagram"
+                      class="footer__icons--icon"
+                    />
+                  </a>
+                </div>
               </div>
               <div class="footer__content">
                 <div class="footer__schedules">
