fix according readme.md

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,12 @@
           </div>
           <div class="header__bottom">
             <h1 class="header__title-image">ХУДОЖНІЙ МУЗЕЙ</h1>
-            <button class="header__button">квитки</button>
+            <a
+              href="#actions"
+              class="header__button"
+            >
+              <span class="header__botton-text">квитки</span>
+            </a>
             <div class="header__actions">
               <span class="header__actions-line"></span>
               Події
@@ -283,7 +288,7 @@
                     />
                     <img
                       class="gallery__picture"
-                      src="./images/gallery/slider/picture4.png"
+                      src="./images/gallery/slider/picture1.png"
                       alt="Picture 3"
                     />
                   </picture>
@@ -371,7 +376,7 @@
               </a>
               <div class="contacts__icons">
                 <a
-                  href="https:/facebook.com"
+                  href="https://facebook.com"
                   target="_blank"
                   class="icon icon--facebook"
                 ></a>
