correct review comments

--- a/src/index.html
+++ b/src/index.html
@@ -357,7 +357,10 @@
                     placeholder="E-mail"
                     required
                   />
-                  <button class="subscribe-form__button"></button>
+                  <button
+                    class="subscribe-form__button"
+                    type="reset"
+                  ></button>
                 </form>
               </div>
             </div>
@@ -421,19 +424,37 @@
             <article class="address contacts__address">
               <h2 class="address__title">Контакти:</h2>
               <p class="address__text">
-                вул. М. Грушевського, 6; Київ, 01001
+                <a
+                  class="address__link"
+                  href="https://maps.app.goo.gl/hrffzvowH6svSg1t6"
+                  target="_blank"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
                 <br />
                 тел.
                 <a
-                  class="address__phone"
+                  class="address__link"
                   href="tel:+380442781357"
                 >
                   +38 (044) 278-13-57
                 </a>
                 <br />
-                факс +38 (044) 278-74-54
+                факс
+                <a
+                  class="address__link"
+                  href="tel:+380442787454"
+                >
+                  +38 (044) 278-74-54
+                </a>
                 <br />
-                e-mail: info@namu.kiev.ua
+                e-mail:
+                <a
+                  class="address__link"
+                  href="mailto:info@namu.kiev.ua"
+                >
+                  info@namu.kiev.ua
+                </a>
               </p>
             </article>
             <div class="contacts__up">
